crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__ODOO060_ODOO060.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODOO060 Not enough arguments for odoo._ format string
 --> ODOO060.py:6:9
  |
4 | class Model:
5 |     def method(self, name, count):
6 |         _("%s of %s", count)  # ODOO060
  |         ^^^^^^^^^^^^^^^^^^^^
7 |         self.env._("%s of %s", count)  # ODOO060
8 |         _("%s: %.*f", name)  # ODOO060 (`.*` consumes an extra value)
  |

ODOO060 Not enough arguments for odoo._ format string
 --> ODOO060.py:7:9
  |
5 |     def method(self, name, count):
6 |         _("%s of %s", count)  # ODOO060
7 |         self.env._("%s of %s", count)  # ODOO060
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |         _("%s: %.*f", name)  # ODOO060 (`.*` consumes an extra value)
  |

ODOO060 Not enough arguments for odoo._ format string
  --> ODOO060.py:8:9
   |
 6 |         _("%s of %s", count)  # ODOO060
 7 |         self.env._("%s of %s", count)  # ODOO060
 8 |         _("%s: %.*f", name)  # ODOO060 (`.*` consumes an extra value)
   |         ^^^^^^^^^^^^^^^^^^^
 9 |
10 |         # No diagnostic: counts match.
   |
