crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__ODOO061_ODOO061.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODOO061 Too many arguments for odoo._ format string
 --> ODOO061.py:6:9
  |
4 | class Model:
5 |     def method(self, var, name):
6 |         _("Hello %s", var, name)  # ODOO061
  |         ^^^^^^^^^^^^^^^^^^^^^^^^
7 |         self.env._("Hello", var)  # ODOO061
8 |         _("Hello %%", var)  # ODOO061 (`%%` does not consume a value)
  |

ODOO061 Too many arguments for odoo._ format string
 --> ODOO061.py:7:9
  |
5 |     def method(self, var, name):
6 |         _("Hello %s", var, name)  # ODOO061
7 |         self.env._("Hello", var)  # ODOO061
  |         ^^^^^^^^^^^^^^^^^^^^^^^^
8 |         _("Hello %%", var)  # ODOO061 (`%%` does not consume a value)
  |

ODOO061 Too many arguments for odoo._ format string
  --> ODOO061.py:8:9
   |
 6 |         _("Hello %s", var, name)  # ODOO061
 7 |         self.env._("Hello", var)  # ODOO061
 8 |         _("Hello %%", var)  # ODOO061 (`%%` does not consume a value)
   |         ^^^^^^^^^^^^^^^^^^
 9 |
10 |         # No diagnostic: counts match.
   |
