crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__ODOO068_ODOO068.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODOO068 `check_access_rights` is deprecated since Odoo 18.0. Use `check_access` instead, or `has_access` where a boolean is needed.
  --> ODOO068.py:8:14
   |
 7 |     def deprecated_in_18(self):
 8 |         self.check_access_rights("read")
   |              ^^^^^^^^^^^^^^^^^^^
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
   |

ODOO068 [*] `check_access_rule` is deprecated since Odoo 18.0. Use `check_access` instead.
  --> ODOO068.py:9:14
   |
 7 |     def deprecated_in_18(self):
 8 |         self.check_access_rights("read")
 9 |         self.check_access_rule("write")
   |              ^^^^^^^^^^^^^^^^^
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
   |
help: Replace with `check_access`
   |
8  |         self.check_access_rights("read")
   -         self.check_access_rule("write")
9  +         self.check_access("write")
10 |         self._filter_access_rules("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODOO068 [*] `_filter_access_rules` is deprecated since Odoo 18.0. Use `_filtered_access` instead.
  --> ODOO068.py:10:14
   |
 8 |         self.check_access_rights("read")
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
   |              ^^^^^^^^^^^^^^^^^^^^
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
   |
help: Replace with `_filtered_access`
   |
9  |         self.check_access_rule("write")
   -         self._filter_access_rules("read")
10 +         self._filtered_access("read")
11 |         self._filter_access_rules_python("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODOO068 [*] `_filter_access_rules_python` is deprecated since Odoo 18.0. Use `_filtered_access` instead.
  --> ODOO068.py:11:14
   |
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         self._check_recursion()
13 |         self._check_m2m_recursion("child_ids")
   |
help: Replace with `_filtered_access`
   |
10 |         self._filter_access_rules("read")
   -         self._filter_access_rules_python("read")
11 +         self._filtered_access("read")
12 |         self._check_recursion()
   |
note: This is an unsafe fix and may change runtime behavior

ODOO068 `_check_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> ODOO068.py:12:14
   |
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
   |              ^^^^^^^^^^^^^^^^
13 |         self._check_m2m_recursion("child_ids")
   |

ODOO068 `_check_m2m_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> ODOO068.py:13:14
   |
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
13 |         self._check_m2m_recursion("child_ids")
   |              ^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def deprecated_in_19(self):
   |

ODOO068 `read_group` is deprecated since Odoo 19.0. Use `_read_group` in backend code, or `formatted_read_group` for a formatted result.
  --> ODOO068.py:16:14
   |
15 |     def deprecated_in_19(self):
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
   |              ^^^^^^^^^^
17 |         self.check_field_access_rights("read", ["name"])
18 |         self.env["my.model"].browse(1).toggle_active()
   |

ODOO068 `check_field_access_rights` is deprecated since Odoo 19.0. Use `_check_field_access`, or `fields_get` to list the allowed fields.
  --> ODOO068.py:17:14
   |
15 |     def deprecated_in_19(self):
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
17 |         self.check_field_access_rights("read", ["name"])
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
18 |         self.env["my.model"].browse(1).toggle_active()
   |

ODOO068 `toggle_active` is deprecated since Odoo 19.0. Use `action_archive` or `action_unarchive` depending on the intent.
  --> ODOO068.py:18:40
   |
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
17 |         self.check_field_access_rights("read", ["name"])
18 |         self.env["my.model"].browse(1).toggle_active()
   |                                        ^^^^^^^^^^^^^
19 |
20 |     def read_group(self, domain, fields, groupby, offset=0, limit=None, orderby=False):
   |

ODOO068 `read_group` is deprecated since Odoo 19.0. Use `_read_group` in backend code, or `formatted_read_group` for a formatted result.
  --> ODOO068.py:26:24
   |
24 |     def toggle_active(self):
25 |         """A `super()` call to a *different* deprecated method is still a migration site."""
26 |         return super().read_group([], [], [])
   |                        ^^^^^^^^^^
27 |
28 |     def replacements(self):
   |
