crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__attribute_string_redundant.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8113 [*] The `string` attribute is redundant and should be removed
 --> attribute_string_redundant.py:7:5
  |
5 |     _inherit = "my.model"
6 |
7 |     name = fields.Char("Name")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |
9 |     user_id = fields.Many2one("res.users", string="User")
  |
help: Remove redundant `string` attribute
  |
6 |
  -     name = fields.Char("Name")
7 +     name = fields.Char()
8 |
  |

ODW8113 [*] The `string` attribute is redundant and should be removed
  --> attribute_string_redundant.py:9:5
   |
 7 |     name = fields.Char("Name")
 8 |
 9 |     user_id = fields.Many2one("res.users", string="User")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |
11 |     state = fields.Selection([("a", "A")], "State")
   |
help: Remove redundant `string` attribute
   |
8  |
   -     user_id = fields.Many2one("res.users", string="User")
9  +     user_id = fields.Many2one("res.users")
10 |
   |

ODW8113 [*] The `string` attribute is redundant and should be removed
  --> attribute_string_redundant.py:11:5
   |
 9 |     user_id = fields.Many2one("res.users", string="User")
10 |
11 |     state = fields.Selection([("a", "A")], "State")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |
13 |     partner_ids = fields.Many2many(
   |
help: Remove redundant `string` attribute
   |
10 |
   -     state = fields.Selection([("a", "A")], "State")
11 +     state = fields.Selection([("a", "A")])
12 |
   |

ODW8113 [*] The `string` attribute is redundant and should be removed
  --> attribute_string_redundant.py:13:5
   |
11 |       state = fields.Selection([("a", "A")], "State")
12 |
13 | /     partner_ids = fields.Many2many(
14 | |         "res.partner", "table_name", "col1", "col2", "Partner"
15 | |     )
   | |_____^
16 |
17 |       other = fields.Char(string="Different Label")
   |
help: Remove redundant `string` attribute
   |
13 |     partner_ids = fields.Many2many(
   -         "res.partner", "table_name", "col1", "col2", "Partner"
14 +         "res.partner", "table_name", "col1", "col2"
15 |     )
   |
